force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Bill_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_Account_Ref__c</fullName>
    <description>Identificador del objeto Account, que obligatoriamente debe estar en el objeto Bill</description>
    <label>QB Bill Account Ref</label>
    <length>5</length>
    <type>Text</type>
</CustomField>