force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Bill_AP_Acc_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_AP_Acc_Ref__c</fullName>
    <label>QB Bill AP Acc Ref</label>
    <length>5</length>
    <type>Text</type>
</CustomField>