force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Company_ID__c</fullName>
    <description>Company ID from QuickBooks</description>
    <label>QB Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>