force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Item_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Item_Account_Ref__c</fullName>
    <description>Invoice Item Account Ref</description>
    <label>QB Item Account Ref</label>
    <length>4</length>
    <type>Text</type>
</CustomField>