force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Item_Ref__c</fullName>
    <description>Invoice Item Ref</description>
    <label>QB Item Ref</label>
    <length>3</length>
    <type>Text</type>
</CustomField>