force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Journal_Acc_Ref_Credit__c.field-meta.xml
<CustomField>
    <fullName>QB_Journal_Acc_Ref_Credit__c</fullName>
    <label>QB Journal Acc Ref Credit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>