force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_Minor_Version__c.field-meta.xml
<CustomField>
    <fullName>QB_Minor_Version__c</fullName>
    <description>QB REST API minor version</description>
    <label>QB Minor Version</label>
    <length>3</length>
    <type>Text</type>
</CustomField>