force-app/main/default/objects/QBRESTConfiguration__mdt/fields/QB_URI_Context__c.field-meta.xml
<CustomField>
    <fullName>QB_URI_Context__c</fullName>
    <description>Base URI context</description>
    <label>QB URI Context</label>
    <length>15</length>
    <type>Text</type>
</CustomField>