force-app/main/default/objects/QBRESTConfiguration__mdt/fields/SF_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>SF_Named_Credential__c</fullName>
    <description>Named Credential - Name</description>
    <label>SF Named Credential</label>
    <length>15</length>
    <type>Text</type>
</CustomField>