force-app/main/default/objects/QBRESTConfiguration__mdt/fields/SF_NC_URL_schema__c.field-meta.xml
<CustomField>
    <fullName>SF_NC_URL_schema__c</fullName>
    <description>Named Credential URL Schema</description>
    <label>SF NC URL schema</label>
    <length>15</length>
    <type>Text</type>
</CustomField>